--- a/code/src/IntegrationTests/OpenIdAuth.IntegrationTests.csproj
+++ b/code/src/IntegrationTests/OpenIdAuth.IntegrationTests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{EA2A4496-3A2D-4146-A420-243B52473143}</ProjectGuid>
+    <ProjectGuid>{818424B5-3949-4241-B754-991A05751F1A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OpenIdAuth.Service</RootNamespace>
-    <AssemblyName>OpenIdAuth.Service</AssemblyName>
+    <RootNamespace>OpenIdAuth.IntegrationTests</RootNamespace>
+    <AssemblyName>OpenIdAuth.IntegrationTests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Gallio, Version=3.0.6.0, Culture=neutral, PublicKeyToken=eb9cfa67ee6ab36e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\MbUnit3\Gallio.dll</HintPath>
+    </Reference>
+    <Reference Include="MbUnit, Version=3.0.6.0, Culture=neutral, PublicKeyToken=eb9cfa67ee6ab36e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\MbUnit3\MbUnit.dll</HintPath>
+    </Reference>
+    <Reference Include="Moq, Version=3.0.223.1, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\Moq.3.0.223\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -45,18 +57,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuthenticationService.cs" />
-    <Compile Include="IAuthenticationService.cs" />
-    <Compile Include="IImageService.cs" />
-    <Compile Include="ImageService.cs" />
-    <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserService.cs" />
+    <Compile Include="RepositoryTests\UserRepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Data\OpenIdAuth.Data.csproj">
       <Project>{B7F04C66-76A9-4BB3-A62D-2986303F13CC}</Project>
       <Name>OpenIdAuth.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Service\OpenIdAuth.Service.csproj">
+      <Project>{EA2A4496-3A2D-4146-A420-243B52473143}</Project>
+      <Name>OpenIdAuth.Service</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Web\OpenIdAuth.Web.csproj">
+      <Project>{F7AC01E9-E3DE-435D-B609-DE0113DD2B14}</Project>
+      <Name>OpenIdAuth.Web</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
