--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="StructureMap, Version=2.5.3.0, Culture=neutral, PublicKeyToken=e60ad81abae3c223, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\StructureMap.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -57,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\Config.cs" />
+    <Compile Include="Infrastructure\CoreRegistry.cs" />
     <Compile Include="Model\DataAccess\ConversionHelper.cs" />
     <Compile Include="Model\DataAccess\DB.designer.cs">
       <DependentUpon>DB.dbml</DependentUpon>
@@ -65,6 +70,7 @@
     </Compile>
     <Compile Include="Model\DataAccess\IImageRepository.cs" />
     <Compile Include="Model\DataAccess\IUserRepository.cs" />
+    <Compile Include="Model\DataAccess\SqlImageRepository.cs" />
     <Compile Include="Model\DataAccess\SqlUserRepository.cs" />
     <Compile Include="Model\Domain\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
