--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -43,8 +43,19 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Moq.3.0.223\Moq.dll</HintPath>
     </Reference>
+    <Reference Include="StructureMap, Version=2.5.3.0, Culture=neutral, PublicKeyToken=e60ad81abae3c223, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\StructureMap.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Web.Abstractions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Web.Mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Web.Routing">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Xml.Linq">
@@ -58,12 +69,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Infrastructure\ConfigTests.cs" />
+    <Compile Include="IoCConfigTests\CoreRegistryTests.cs" />
+    <Compile Include="IoCConfigTests\UiConfigTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DomainTests\UserTests.cs" />
     <Compile Include="ServiceTests\AuthenticationServiceTests.cs" />
     <Compile Include="ServiceTests\ImageServiceTests.cs" />
     <Compile Include="Fakes\TestUserRepository.cs" />
     <Compile Include="ServiceTests\UserServiceTests.cs" />
+    <Compile Include="TestHelpers\MvcMockHelpers.cs" />
+    <Compile Include="UI\Controllers\HomeControllerTests.cs" />
     <Compile Include="UI\Controllers\RegisterControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,9 +86,10 @@
       <Project>{9DB6308B-3C85-47F9-8A53-F2AD32C74A3A}</Project>
       <Name>Core</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TestHelpers\" />
+    <ProjectReference Include="..\UI\UI.csproj">
+      <Project>{F7AC01E9-E3DE-435D-B609-DE0113DD2B14}</Project>
+      <Name>UI</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
