--- a/src/Core/Properties/Settings.settings
+++ b/src/Core/Properties/Settings.settings
@@ -2,10 +2,10 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="OpenIdAuth.Core.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="OpenIdAuthConnectionString" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Data Source=CV-002\SQLEXPRESS;Initial Catalog=OpenIdAuth;Integrated Security=True</Value>
+    <Setting Name="OpenIdAuthConnectionString" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Data Source=.\SQLEXPRESS;Initial Catalog=OpenIdAuth;Integrated Security=True</Value>
     </Setting>
-    <Setting Name="NumberOfImagesForPassword" Type="System.Int32" Scope="User">
+    <Setting Name="NumberOfImagesForPassword" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">9</Value>
     </Setting>
   </Settings>
