--- a/src/Core/app.config
+++ b/src/Core/app.config
@@ -2,18 +2,20 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="OpenIdAuth.Core.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="OpenIdAuth.Data.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="OpenIdAuth.Core.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
-  <userSettings>
+  <applicationSettings>
     <OpenIdAuth.Core.Properties.Settings>
       <setting name="OpenIdAuthConnectionString" serializeAs="String">
-        <value>Data Source=CV-002\SQLEXPRESS;Initial Catalog=OpenIdAuth;Integrated Security=True</value>
+        <value>Data Source=.\SQLEXPRESS;Initial Catalog=OpenIdAuth;Integrated Security=True</value>
       </setting>
       <setting name="NumberOfImagesForPassword" serializeAs="String">
         <value>9</value>
       </setting>
     </OpenIdAuth.Core.Properties.Settings>
-  </userSettings>
+  </applicationSettings>
 </configuration>
