--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -51,6 +51,9 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Web.Abstractions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -69,6 +72,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Infrastructure\ConfigTests.cs" />
+    <Compile Include="Infrastructure\CoreRegistryTests.cs" />
+    <Compile Include="Infrastructure\DatabaseMaintenance.cs" />
     <Compile Include="IoCConfigTests\CoreRegistryTests.cs" />
     <Compile Include="IoCConfigTests\UiConfigTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -90,6 +95,11 @@
       <Project>{F7AC01E9-E3DE-435D-B609-DE0113DD2B14}</Project>
       <Name>UI</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Core\app.config">
+      <Link>app.config</Link>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
